# 0t-skill-hackson

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AGENT_QUICKSTART.md  CLAUDE.md  CONFIGURATION.md  README.md  START_HERE.md  agent.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
0t-protocol/: ENTRYPOINT.md  manifest.json
0t-protocol/nextgen/: manifest.json
0t-protocol/roles/: planner.md  reviewer.md
0t-protocol/workflows/: autoresearch.workflow.yaml
0t-skill_hackson_v2ing/: .env.example  .gitignore  README.md  agent.md  docker-compose.yml  pyproject.toml
0t-skill_hackson_v2ing/docs/: README.md
0t-skill_hackson_v2ing/frontend/: index.html  styles.css
0t-skill_hackson_v2ing/scripts/: bootstrap.sh  start_ave_data_service.sh  (+4 more)
distill-modules/: 00-总结指引.md  00-数据源审计与AVE能力比对.md  M1-数据采集与标准化.md  M2-交易配对与统计特征.md  M3-市场环境上下文.md  M4-触发信号与风控过滤.md  M5-LLM蒸馏与Skill生成.md  M6-回测与置信度评估.md  M7-交易风格Archetype与Pattern识别改进方案.md
docker/: Dockerfile.app  Dockerfile.ave
docs/: ARCHITECTURE.md  AVE_SKILLS.md  INTEGRATION.md  PROJECT_INTRODUCTION.md  README.md  fix-architecture-issues-phase2.md  fix-phase2-remaining.md  fix-pi-reflection-blocking.md  reflection-问题剖析与改进方案.md  蒸馏链综合改造-AgentTeam任务卡.md  蒸馏链综合改造-Archetype模块落地方案.md  蒸馏链综合改造-Reflection模块落地方案.md  蒸馏链综合改造-实施总路线.md  蒸馏链综合改造-耦合与验收方案.md
frontend/: README.md  styles.css
reports/: README.md
scripts/: bootstrap.sh  docker_build.sh  docker_cli.sh  docker_up.sh  doctor.sh  run_staging_flow.sh  start_ave_data_service.sh  start_frontend.sh  start_pi_runtime.sh  start_stack.sh  verify.sh
skills/: README.md
team-protocol/: ENTRYPOINT.md  manifest.json
tests/: README.md  test_agent_team_service.py  test_nextgen_adapter_integration.py  test_nextgen_adapter_registry.py  test_nextgen_architecture_cli.py  test_nextgen_distillation_worker_bridge.py  test_nextgen_plugin_registry.py  test_nextgen_workflow_cli.py  test_nextgen_workflow_service.py  test_style_distillation_archetype_integration.py  test_verify_script.py  test_wallet_style_compiler_archetype.py  test_wallet_style_context_layering.py  test_wallet_style_reflection.py
workflows/: README.md
(+1097 files in other folders)
