[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ot-skill-enterprise"
version = "0.1.0"
description = "0T Skill Enterprise workspace for AVE-backed analysis services and skills."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "pydantic>=2.0.0",
  "PyYAML>=6.0.0",
  "requests>=2.32.0",
  "requests-ratelimiter>=0.7.0",
  "uvicorn>=0.30.0",
]

[project.scripts]
ot-enterprise = "ot_skill_enterprise.root_cli:main"
ot-serve-ave-data = "ot_skill_enterprise.service_entrypoints:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
