[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ot-skill-enterprise"
version = "0.1.0"
description = "0T Skill Enterprise control plane for agents, providers, skills, runs, QA, and evolution."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "pydantic>=2.0.0",
  "PyYAML>=6.0.0",
  "requests>=2.32.0",
  "requests-ratelimiter>=0.7.0",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
storage = [
  "boto3>=1.35.0",
  "psycopg[binary]>=3.2.0",
  "redis>=5.0.0",
]
dev = [
  "pytest>=8.3.0",
]
ave-advanced = [
  "websocket-client>=1.6.0",
  "eth-account>=0.10.0",
  "solders>=0.20.0",
]

[project.scripts]
0t = "ot_skill_enterprise.control_plane.cli:main"
0t-serve-ave-data = "ot_skill_enterprise.service_entrypoints:main"
0t-frontend = "ot_skill_enterprise.frontend_server:main"
0t-runtime-bootstrap = "ot_skill_enterprise.runtime.pi.bootstrap:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
  "src",
  "services/ave-data-service",
]
